<resources>
    <string name="app_name" translatable="false">TopCEO</string>
    <string name="like_title">Like</string>
    <string name="commentnum">Comment</string>
    <string name="welcome">Share the moment the world around you</string>
    <string name="user_name">Username</string>
    <string name="select_user_name">Select username</string>
    <string name="login">Login</string>
    <string name="loginbyfacebook">Sign in with Facebook</string>
    <string name="done">Done</string>
    <string name="loginfacebook">Facebook</string>
    <string name="sign_up">Register</string>
    <string name="sign_up1">Register</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="birthday">Birthday</string>
    <string name="inputforcomplete">Enter the information to complete the registration</string>
    <string name="country">Country</string>
    <string name="phone">Phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="otherkind">Moment</string>
    <string name="tempservice">Click on Register you indicate that you have read and agree</string>
    <string name="tempservice1">Terms of Service</string>
    <string name="settingprofile">Photos personal</string>
    <string name="planet_prompt">Select a country</string>
    <string name="btnresetpass">Reset password</string>
    <string name="facebook">Facebook</string>
    <string name="reshare">Share Back on your wall</string>
    <string name="reshare_from">Reshared from</string>
    <string name="location">Location</string>
    <string name="globalrank">World class: %1$s</string>
    <string name="localrank">Rank: %1$s</string>
    <string name="twitter">Twitter</string>
    <string name="errorkey_relogin">System error occurred, please login or try again</string>
    <string name="errorkey1">System Error</string>
    <string name="errorkey2">Username already exists</string>
    <string name="errorkey3">email already exists</string>
    <string name="errorkey4">Username or password is incorrect</string>
    <string name="errorkey5">Account are logged in on other devices</string>
    <string name="errorkey6">There is no right to connect to the system</string>
    <string name="errorkey7">Email does not exist</string>
    <string name="errorkey8">This account has been locked</string>
    <string name="errorkey9">Photos deleted</string>
    <string name="errorkey10">This account does not exist</string>
    <string name="errorphoto">You have no avatar</string>
    <string name="errorbirthday">You have no birthday</string>
    <string name="errorusergenaral">You have not entered %1$s.</string>
    <string name="errorbio">About maximum 80 characters only.</string>
    <string name="errorban">Your account has been locked.</string>
    <string name="notifyfollow">tracked</string>
    <string name="notifylike">likes of</string>
    <string name="notifycomment">comment form of</string>
    <string name="notifytag">tagged</string>
    <string name="notifytagtail">on a photo</string>
    <string name="notifylike_owner">you</string>
    <string name="notifyfollow_owner1">you</string>
    <string name="notifypostimage">add a new</string>
    <string name="title_comment">Comment</string>
    <string name="title_editphoto">Edit image</string>
    <string name="title_Message">Message</string>
    <string name="title_Chat">Chat</string>
    <string name="title_Contact">Contacts</string>
    <string name="title_photos">Image of %1$s</string>
    <string name="photos">photos</string>
    <string name="send">Submit</string>
    <string name="top_week">Top week</string>
    <string name="top_month">Top month</string>
    <string name="top_year">Top year</string>
    <string name="first_name">Name</string>
    <string name="bios">Bios</string>
    <string name="errorbio1">You did not enter the content descriptions, click here to edit your personal information</string>
    <string name="errorbio2">No content introduction</string>
    <string name="last_name">Last name</string>
    <string name="phoneProfile">Phone</string>
    <string name="website">Website</string>
    <string name="setting_facebookfriend">Find friends on Facebook</string>
    <string name="setting_search">Find friends on TopCEO</string>
    <string name="setting_twitterfriend">Find friends on Twitter</string>
    <string name="setting_contactlist">Find friends from contacts</string>
    <string name="setting_invite">Invite</string>
    <string name="invite_success">Send invitation success</string>
    <string name="invite_fail">Send invitation failed, please try again</string>
    <string name="setting_web">The website TopCEO</string>
    <string name="setting_editprofile">Edit personal information</string>
    <string name="setting_invite_viber">Invite on Viber</string>
    <string name="setting_invite_zalo">Invite on Zalo</string>
    <string name="setting_editprofile_semi">Personal Information</string>
    <string name="search">Search</string>
    <string name="search_filter">Filter:</string>
    <string name="setting_language">Language</string>
    <string name="followedextra">You have followed this account</string>
    <string name="notfollowextra">You have not followed this account</string>
    <string name="nointernet">No network connection</string>
    <string name="share_dialog">Share via:</string>
    <string name="current_language">The current language:</string>
    <string name="language">Language</string>
    <string name="logout">Sign out</string>
    <string name="contactfriend">Friends from the contacts</string>
    <string name="facebookfriend">Friends from Facebook</string>
    <string name="googlemap">Map</string>
    <string name="twitterfriend">Friends from Twitter</string>
    <string name="detail">Details</string>
    <string name="upload_photo">Upload an image</string>
    <string name="upload_gender">Category images:</string>
    <string name="copy_url">Copy photo url</string>
    <string name="download_image">Download this image</string>
    <string name="select_action">Choose action</string>
    <string name="copy_success">Copied photo url</string>
    <string name="censorship">Browsing</string>
    <string name="delete_image">Delete</string>
    <string name="delete_image_success">Delete picture success</string>
    <string name="delete_image_fail">There was an error, can not erase the image at this time</string>
    <string name="report_image">Report abuse</string>
    <string name="newpassword">New password</string>
    <string name="oldpassword">Old password</string>
    <string name="changepassword">Change password</string>
    <string name="changecamera">Change the camera</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="erroremail">Email invalid</string>
    <string name="errorusername">Your name must be letters, numbers, and from 7 to 20 characters, contain no special characters, contains no spaces and no sign</string>
    <string name="errorusername1">Account name is greater than 7 letters and characters</string>
    <string name="errorphone">Your telephone number invalid</string>
    <string name="errorusername_admin">Account name contains the string of characters does not allow \'admin \'</string>
    <string name="errorpassword">Passwords must be between 7 and 15 characters</string>
    <string name="errorpassword1">%1$s is from 7 to 15 characters</string>
    <string name="errorconfirmpass">The new password must be the same password confirmation</string>
    <string name="changepasswordsuccess">Password changed successfully</string>
    <string name="contact_confirm">To find your friend, we will access your contacts</string>
    <string name="dialog_close">Close</string>
    <string name="bok">OK</string>
    <string name="yes">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout">Do you want to log out?</string>
    <string name="girl">Female</string>
    <string name="boy">Male</string>
    <string name="loadmore">Load more</string>
    <string name="allitemload">No image more</string>
    <string name="noitem">No picture</string>
    <string name="reviouscomment">View previous comments</string>
    <string name="previousmessage">View previous messages</string>
    <string name="policy_service">Privacy policy</string>
    <string name="no_comment">No comments</string>
    <string name="confirm_delete_comment">You want to delete this comment?</string>
    <string name="toast_entermessage">Enter a message</string>
    <string name="toast_chaterror">Chat system error</string>
    <string name="toast_comment">Enter a comment</string>
    <string name="toast_send_email_succedd">A new password has been sent to your email</string>
    <string name="send_request_new_password_success">Send a request success. Please check your email to change your password.</string>
    <string name="send_request_verify_email_success">Send a request success. Please check your email to verify.</string>
    <string name="toast_erroconnection">Connection problem</string>
    <string name="toast_errorsystem">System fault. Please try again</string>
    <string name="toast_errornocamera">Device has no camera</string>
    <string name="toast_signupsuccess">Sign up for success</string>
    <string name="toast_signup_errorprofile">Sign up for success, but personal image has errors!</string>
    <string name="toast_contentcheck">Photos feelings maximum 80 characters</string>
    <string name="toast_contentcheck_error">You did not enter the picture emotions</string>
    <string name="toast_upload_success">Photos were uploaded successfully</string>
    <string name="toast_uploaderror">Download image errors</string>
    <string name="toast_locationerror">Can not find your location, you can enter manually</string>
    <string name="toast_locationerror_find">Can not find this location</string>
    <string name="error_setavatar">Unable to change the avatar</string>
    <string name="toast_setavatar">Avatar has successfully changed</string>
    <string name="setting_edtchangeavatar">Change avatar</string>
    <string name="internal_storage">Internal storage</string>
    <string name="topuserRank">Rank</string>
    <string name="topuser100">Top 100 users</string>
    <string name="topimage100">Top 100 shots</string>
    <string name="loading">Loading ...</string>
    <string name="no_fbfriend">No friends on facebook</string>
    <string name="no_twitterfriend">No friends on twitter</string>
    <string name="report_tittle">Options reason:</string>
    <string name="job">Job</string>
    <string name="gender">Gender</string>
    <string name="action_settings">Settings</string>
    <string name="change_photo">Change avatar</string>
    <string name="full_name">Full name</string>
    <string name="me">Me</string>
    <string name="notification">Notifications</string>
    <string name="post_image">Post photos</string>
    <string name="skygram">Skygram</string>
    <string name="home">Home</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="user_info">User info</string>
    <string name="social_networking_site">Social networking site</string>
    <string name="email_auth_please">Please verify the email to complete the profile</string>
    <string name="phone_auth_please">Phone number has not been verified</string>
    <string name="url">URL</string>
    <string name="leave_group">Leave group</string>
    <string name="edit_cover">Edit Cover</string>
    <string name="delete_group">Delete group</string>
    <string name="browse_the_post">Browse the post</string>
    <string name="required_to_join">Required to join</string>
    <string name="linkedin">LinkedIn</string>
    <string name="company">Company</string>
    <string name="company_address">Company address</string>
    <string name="username_hint">username</string>
</resources>