<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_1"
        android:icon="@drawable/bg_tab_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/navigation_2"
        android:icon="@drawable/bg_tab_sontung"
        android:title="@string/skygram"
        />
    <item
        android:id="@+id/navigation_3"
        android:icon="@drawable/bg_tab_post"
        android:title="@string/post_image"
        />
    <item
        android:id="@+id/navigation_4"
        android:icon="@drawable/bg_tab_notify"
        android:title="@string/notification"
        />

    <item
        android:id="@+id/navigation_5"
        android:icon="@drawable/bg_tab_person"
        android:title="@string/me"
        />
</menu>
