<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/action_bar_color"
        android:elevation="@dimen/default_elevation"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/title_bar_layout_default_2"/>
    </androidx.appcompat.widget.Toolbar>
    <include layout="@layout/separate_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:id="@+id/imageView1"
                    android:layout_width="@dimen/publish_photo_thumbnail_size"
                    android:layout_height="@dimen/publish_photo_thumbnail_size" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/change_photo"
                    android:textColor="@color/btnColor"
                    android:textSize="@dimen/title_size_large" />
                <!-- Name Label -->


                <TextView
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@string/user_info"
                    style="@style/textview_style_title_1"
                    android:layout_width="match_parent"
                    android:background="@color/grey_100"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/title_size"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/full_name"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText1"
                        android:hint="@string/full_name"
                        android:inputType="textCapWords"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/user_name"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText2"
                        style="@style/text_style_input_right"
                        android:hint="@string/user_name"
                        android:inputType="textEmailAddress"
                        android:maxLength="100"/>

                </LinearLayout>

                <!--<include layout="@layout/separate_horizontal" />-->

                <LinearLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/email"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText10"
                        style="@style/text_style_input_right"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email" />

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/margin_10dp"
                        android:paddingRight="@dimen/margin_5dp"
                        android:src="@drawable/ic_info_outline_orange_500_24dp" />
                </LinearLayout>
                <TextView
                    android:visibility="gone"
                    android:id="@+id/txtAlertEmail"
                    android:text="@string/email_auth_please"
                    style="@style/textview_style_title_1"
                    android:padding="5dp"
                    android:textStyle="normal"
                    android:textColor="@color/orange_500"
                    android:layout_gravity="end"
                    />

                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/phone"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText4"
                        android:digits="0123456789"
                        android:hint="@string/phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:enabled="false"
                        style="@style/text_style_input_right" />
                    <ImageView
                        android:id="@+id/img2"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/margin_10dp"
                        android:paddingRight="@dimen/margin_5dp"
                        android:src="@drawable/ic_info_outline_orange_500_24dp" />

                </LinearLayout>
                <TextView
                    android:id="@+id/txtAlertPhone"
                    android:text="@string/phone_auth_please"
                    style="@style/textview_style_title_1"
                    android:padding="5dp"
                    android:textStyle="normal"
                    android:textColor="@color/orange_500"
                    android:layout_gravity="end"
                    />
                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/gender"
                        style="@style/textview_style_title_1"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>

                    <!--<EditText
                        android:id="@+id/editText11"
                        android:hint="@string/gender"
                        android:imeOptions="actionNext"
                        style="@style/text_style_input_right" />-->

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:textAlignment="textEnd"
                        android:entries="@array/arr_gender"
                        android:popupBackground="@color/white"
                        android:spinnerMode="dropdown"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/job"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText12"
                        android:hint="@string/job"
                        android:inputType="textCapSentences"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/company"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText13"
                        android:hint="@string/company"
                        android:inputType="textCapSentences"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/company_address"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText14"
                        android:hint="@string/company_address"
                        android:inputType="textCapSentences"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />
                <TextView
                    android:text="@string/bios"
                    style="@style/textview_style_title_1"
                    android:layout_width="match_parent"
                    android:background="@color/grey_100"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/title_size"
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editBios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bios"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textColor="@color/black"
                    android:minLines="5"
                    android:maxLines="5"
                    android:lines="5"
                    android:imeOptions="actionDone"
                    android:paddingStart="@dimen/margin_15dp"
                    android:paddingEnd="@dimen/margin_15dp"
                    android:textSize="@dimen/text_size_menu"

                    />

                <TextView
                    android:text="@string/social_networking_site"
                    style="@style/textview_style_title_1"
                    android:layout_width="match_parent"
                    android:background="@color/grey_100"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textSize="@dimen/title_size"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/website"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText9"
                        android:hint="@string/url"
                        android:inputType="textWebEmailAddress"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/facebook"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText5"
                        android:hint="@string/url"
                        android:inputType="textWebEmailAddress"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/twitter"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText6"
                        android:hint="@string/username_hint"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/instagram"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText7"
                        android:hint="@string/username_hint"
                        android:maxLength="100"
                        android:maxLines="1"
                        android:inputType="textEmailAddress"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:text="@string/youtube"
                        style="@style/textview_style_title_1" />

                    <EditText
                        android:id="@+id/editText8"
                        android:hint="@string/url"
                        android:inputType="textWebEmailAddress"
                        style="@style/text_style_input_right" />

                </LinearLayout>

                <include layout="@layout/separate_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textview_style_title_1"
                        android:text="@string/linkedin" />

                    <EditText
                        android:id="@+id/editText11"
                        style="@style/text_style_input_right"
                        android:hint="@string/url"
                        android:inputType="textWebEmailAddress" />

                </LinearLayout>

                <TextView
                    style="@style/textview_style_title_1"
                    android:layout_width="match_parent"
                    android:background="@color/grey_100"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>
